# qdacco

./: CHANGELOG.txt  CMakeLists.txt  INSTALL.ca  INSTALL.ca.md  INSTALL.en  INSTALL.en.md  README  README.md  StructureList.cpp  StructureList.h  StructureParser.cpp  StructureParser.h  TODO  about.cpp  about.h  about.ui  auxiliar.cpp  auxiliar.h  changelog  changelog.txt  co  configure  configure.cpp  configure.h  configure.ui  connection.cpp  connection.h  main.cpp  main.h  main.ui  moc_mydialog.cpp  mylineedit.cpp  mylineedit.h  mylistwidget.cpp  mylistwidget.h  prepare.txt  qdacco.cpp  qdacco.pro  qdacco_ca.qm  qdacco_ca.ts  (+7 more)
.github/workflows/: ci.yml  package.yml
core/: CMakeLists.txt  StructureList.cpp  StructureList.h  StructureParser.cpp  StructureParser.h  auxiliar.cpp  auxiliar.h  worddata.cpp  worddata.h
docs/: README.md  developers.md  translation.txt
gui/: About.cpp  About.h  About.ui  AuxiliarGUI.cpp  AuxiliarGUI.h  CMakeLists.txt  CMakeOptions.h.cmake  Configure.cpp  Configure.h  Configure.ui  LineEdit.cpp  LineEdit.h  ListWidget.cpp  ListWidget.h  LoadConfig.cpp  LoadConfig.h  OneInstance.cpp  OneInstance.h  StructureList.cpp  StructureList.h  TODO  TextBrowser.cpp  TextBrowser.h  TrayIcon.cpp  TrayIcon.h  about.cpp  about.h  about.ui  auxiliargui.cpp  auxiliargui.h  configure.cpp  configure.h  configure.ui  connection.cpp  connection.h  icons.qrc  loadconfig.cpp  main.cpp  main.h  main.ui  (+16 more)
gui/doc/: qdacco.1  qdacco.sgml
gui/icons/: qdacco.xpm
lib/: CMakeLists.txt  StructureParser.cpp  StructureParser.h  TODO  auxiliar.cpp  worddata.cpp
lib/qdacco/: worddata.h
misc/: qdacco.desktop
nongui/: Auxiliar.cpp  CMakeLists.txt  StructureList.cpp  StructureList.h  StructureParser.cpp  StructureParser.h  WordData.cpp  WordData.h  auxiliar.cpp  auxiliar.h  worddata.cpp  worddata.h
text/: CMakeLists.txt  Makefile  README  TODO  textdacco.cpp  textdacco.h  textdacco.pro
text/doc/: textqdacco.1
textdacco/: tdacco.cpp
